--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -3,16 +3,73 @@
     margin: 0;
     font-size: 16px;
     box-sizing: border-box;
+    font-weight: normal;
 }
 
 body {
     background-color: #191c24;
 }
 
-@media only screen and (min-width: 320px) and (max-width: 480px){}
-@media only screen and (min-width: 481px) and (max-width: 768px){}
-@media only screen and (min-width: 769px) and (max-width: 1024px){}
-@media only screen and (min-width: 1025px) and (max-width: 1200px){}
+@media only screen and (min-width: 320px) and (max-width: 480px){
+    .container {
+        height: 100vh;
+        width: 100vw;
+        /* background-color: #f8f9fa; */
+        background-color: #191c24;
+        color: #ccc;
+        font-family: "Barlow", sans-serif;
+        position: relative;
+        overflow-y: scroll;
+        padding: 80px 0;
+        display: flex;
+        justify-content: center;
+    }
+}
+@media only screen and (min-width: 481px) and (max-width: 768px){
+    .container {
+        height: 100vh;
+        width: 100vw;
+        /* background-color: #f8f9fa; */
+        background-color: #191c24;
+        color: #ccc;
+        font-family: "Barlow", sans-serif;
+        position: relative;
+        overflow-y: scroll;
+        padding: 80px 0;
+        display: flex;
+        justify-content: center;
+    }
+}
+@media only screen and (min-width: 769px) and (max-width: 1024px){
+    .container {
+        height: 100vh;
+        width: 100vw;
+        /* background-color: #f8f9fa; */
+        background-color: #191c24;
+        color: #ccc;
+        font-family: "Barlow", sans-serif;
+        position: relative;
+        overflow-y: scroll;
+        padding: 80px 0;
+        display: flex;
+        justify-content: center;
+    }
+}
+@media only screen and (min-width: 1025px) and (max-width: 1200px){
+    .container {
+        height: 100vh;
+        width: 100vw;
+        /* background-color: #f8f9fa; */
+        background-color: #191c24;
+        color: #ccc;
+        font-family: "Barlow", sans-serif;
+        position: relative;
+        overflow-y: scroll;
+        padding: 80px 0;
+        display: flex;
+        justify-content: center;
+    }
+}
 
 @media only screen and (min-width: 1201px){
     .container {
@@ -28,4 +85,106 @@ body {
         display: flex;
         justify-content: center;
     }
+}
+
+h1 {
+    font-size: 2.6rem;
+    font-weight: bold;
+    font-family: "Fira Mono", monospace;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+
+h1::before {
+    content: "#";
+    color: #fcca46;
+    font-size: .8em;
+    margin-right: .25rem;
+}
+
+h2 {
+    font-size: 2.3rem;
+    font-weight: bold;
+    font-family: "Fira Mono", monospace;
+    margin-top: .9rem;
+    margin-bottom: .9rem;
+}
+
+h2::before {
+    content: "##";
+    color: #fcca46;
+    font-size: .8em;
+    margin-right: .25rem;
+}
+
+h3 {
+    font-size: 2rem;
+    font-weight: bold;
+    font-family: "Fira Mono", monospace;
+    margin-top: .8rem;
+    margin-bottom: .8rem;
+}
+
+h3::before {
+    content: "###";
+    color: #fcca46;
+    font-size: .8em;
+    margin-right: .25rem;
+}
+
+h4 {
+    font-size: 1.7rem;
+    font-weight: bold;
+    font-family: "Fira Mono", monospace;
+    margin-top: .7rem;
+    margin-bottom: .7rem;
+}
+
+h4::before {
+    content: "####";
+    color: #fcca46;
+    font-size: .8em;
+    margin-right: .25rem;
+}
+
+h5 {
+    font-size: 1.4rem;
+    font-weight: bold;
+    font-family: "Fira Mono", monospace;
+    margin-top: .6rem;
+    margin-bottom: .6rem;
+}
+
+h5::before {
+    content: "#####";
+    color: #fcca46;
+    font-size: .8em;
+    margin-right: .25rem;
+}
+
+h6 {
+    font-size: 1rem;
+    font-weight: bold;
+    font-family: "Fira Mono", monospace;
+    margin-top: .5rem;
+    margin-bottom: .5rem;
+}
+
+h6::before {
+    content: "######";
+    color: #fcca46;
+    font-size: .8em;
+    margin-right: .25rem;
+}
+
+p {
+    font-size: 1rem;
+    margin-top: .25rem;
+    margin-bottom: .75rem;
+    word-spacing: .1rem;
+    line-height: 1.3rem;
+}
+
+span {
+    font-size: 1rem;
 }
